<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CodeScan</string>
    <string name="main_activity">CodeScan</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="borrow_book">借书</string>
    <string name="return_book">还书</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">hgdonline</string>
    <string name="user_name">UserName</string>
    <string name="password">Password</string>
    <string name="button_login">login</string>
    <string name="title_activity_show_books">ShowBooks</string>
    <string name="action_settings">Settings</string>
    <string name="no_data">No Data</string>
    <string name="title_activity_super_user">SuperUserActivity</string>
    
    <string name="search_book_id">索书号：</string>
    <string name="donate_people">书本来源：</string>
    <string name="scan_add_books">扫书入库</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="barcode">条码号：</string>

</resources>