<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.hgdonline.activity.LoginActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginTop="200dp"
        android:background="@color/transparent"
        >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            >
            <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"
		        android:text="@string/user_name"
		        android:textColor="@color/blue"
		        android:background="@color/transparent"
        	/>
            <EditText 
                android:id="@+id/edit_user_name"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            >
            <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"
		        android:text="@string/password"
		        android:textColor="@color/blue"
		        android:background="@color/transparent"
        	/>
            <EditText 
                android:id="@+id/edit_password"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </LinearLayout>
        
        <Button 
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:textSize="20sp"
            android:layout_gravity="right"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>

</FrameLayout>
